--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "engine": [ "node >=0.2.0" ],
   "dependencies": {
     "biggie-router": ">=0.1.10",
-    "middleware": "1.0.x"
+    "middleware": "1.0.x",
+    "uso": "0.2.x"
   }
 }
 
